@@ -16,6 +16,9 @@ Version 16
 
 --Removed wired wooden walls.
 
+--Powered doors and trapdoors no longer pass power neighboring objects.
+
+
 
 
 
